# FBGEMM-meson

fbgemm_gpu/: pyproject.toml
fbgemm_gpu/fbgemm_gpu/: __init__.py
