[build-system]
build-backend = 'mesonpy'

# Potentially, lower versions may work, yet they haven't been tested nor guaranteed to work.
# The only 2 hard requirements are: `meson>=1.3.0` and `cython>=3.0.0`.
requires = [
    'meson_python>=0.16.0',
    'meson>=1.5.2',
]


[project]
name = 'fbgemm_gpu_cpu'
version = '2.0.0.dev0'
readme = 'README.md'
requires-python = '>=3.12'
license = {file = '../LICENSE'}


# These and `[project.optional-dependencies]` should be synced against `setup.py`, `requirements.txt`. and PyPi API:
#
dependencies = [
    'numpy>=2.0.2',
    'pyre-extensions',
    'torch',
]